# BirdSnap

./: .gitignore  .pylintrc  LICENSE  README.md  USE_CASE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: linting.yaml  tests.yaml
scripts/: train_and_deploy.sh  train_local.sh
src/flask/: .env.example  Dockerfile  README.md  app.py  requirements.txt  utils.py
src/streamlit/: Dockerfile  README.md  main.py  requirements.txt
src/train_model/: .dockerignore  .env.example  Dockerfile  README.md  data_setup.py  engine.py  model_builder.py  requirements.txt  train.py  train.sh  train_model.sh
tests/: test_train_model.py
